# cubrix_robot

./: .gitignore  README.md  frames_2025-07-31_00.47.45.gv  uncrustify.cfg  yaml_test  yaml_test.cpp
ar_src/utilities/ar_common/test/: CMakeLists.txt  joint_link_def_test.cpp
ar_src/utilities/ar_utils/: CMakeLists.txt  package.xml
ar_src/utilities/ar_utils/include/: ar_logging.h  ar_serializer.h
ar_src/utilities/ar_utils/src/: ar_logging.cpp  ar_utils.cpp
command/ar_control/: CMakeLists.txt  package.xml
command/ar_control/config/: ar_drive.yaml
command/ar_control/include/: ar_control_client.h  ar_control_server.h  ar_drive_config.h  ar_hardware_interface.h  ar_system.h  ar_system.hpp
command/ar_control/launch/: ar_simualtion.launch.py
command/ar_control/src/: ar_control_client.cpp  ar_control_server.cpp  ar_hardware_interface.cpp  ar_system.cpp
communication/devices/: CMakeLists.txt  package.xml
communication/devices/src/: devices_server.cpp
communication/messages/ar_action/: CMakeLists.txt  package.xml
communication/messages/ar_msgs/: CMakeLists.txt  package.xml
configuration/: CMakeLists.txt
configuration/ar/: package.xml
configuration/ar/ros2_control/: ar.ros2_control.xacro
configuration/config/: ompl_planning.yaml
configuration/launch/: view_robot.launch.py
configuration/ros2_control/: ar.ros2_control.xacro
install/: local_setup.sh  setup.sh
src/command/ar_bt/: CMakeLists.txt  README.md  package.xml
src/command/ar_bt/config/: bt_plugins.xml
src/command/ar_bt/include/ar_bt/: bt_action_nodes.h  bt_condition_nodes.h
src/command/ar_bt/launch/: bt_executor.launch.py
src/command/ar_bt/src/: bt_action_nodes.cpp  bt_condition_nodes.cpp  bt_executor_node.cpp  bt_server_node.cpp
src/command/ar_bt/trees/: pick_place.xml  simple_motion_test.xml  velocity_control_example.xml
src/command/ar_bt/trees/primitives/: go_home.xml  setup_motion.xml
src/command/ar_bt/trees/skills/: pick_object.xml  place_object.xml
src/command/ar_control/: CMakeLists.txt  package.xml
src/command/ar_control/config/: ar_drive.yaml  view_drive_log.sh
src/command/ar_control/include/: ar_control_client.h  ar_control_server.h  ar_drive_client.h  ar_drive_config.h  ar_drive_control.h  ar_hardware_interface.h  ar_joint_control.h  ar_system.hpp  control_def.h  visibility_control.h
src/command/ar_control/launch/: ar_bringup.launch.py  ar_rviz.launch.py  ar_ui.launch.py  moveit_empty.rviz
src/command/ar_control/src/: ar_control_client.cpp  ar_control_server.cpp  ar_drive_client.cpp  ar_drive_control.cpp  ar_hardware_interface.cpp  ar_joint_control.cpp  ar_system.cpp
src/command/ar_control/test/: ar_control_client_server_test.cpp
src/command/ar_motion_planner/: CMakeLists.txt  package.xml
src/command/ar_motion_planner/config/: ar_motion_planner.yaml  motion_planner_params.yaml
src/command/ar_motion_planner/include/ar_motion_planner/: ar_motion_planner.h  planner_types.h
src/command/ar_motion_planner/src/: ar_motion_planner.cpp
src/command/ar_motion_planner/test/: ar_motion_planner_test.cpp
src/command/ar_planning_interface/: CMakeLists.txt  package.xml
src/command/ar_planning_interface/include/ar_planning_interface/: ar_planning_interface.h
src/command/ar_planning_interface/src/: ar_planning_interface.cpp
src/command/ar_planning_interface/test/: ar_planning_interface_test.cpp
src/command/ar_planning_interface/test/config/: moveit_controller.yaml  moveitcpp.yaml
src/command/ar_planning_interface/test/launch/: test_planning_interface.launch.py
src/command/ar_projects/: CMakeLists.txt  README.md  package.xml
src/command/ar_projects/config/: defaults.yaml
src/command/ar_projects/include/ar_projects/: motion_executor.h  project_manager.h  xml_generator.h  yaml_generator.h  yaml_parser.h
src/command/ar_projects/projects/demo_sequence/: config.yaml
src/command/ar_projects/projects/pick_place/: config.yaml
src/command/ar_projects/projects/point_circle/: config.yaml
src/command/ar_projects/projects/rectangle_sequence/: config.yaml
src/command/ar_projects/src/: motion_executor.cpp  project_manager.cpp  project_runner_node.cpp  xml_generator.cpp  yaml_generator.cpp  yaml_parser.cpp
src/command/ar_projects/src/motion_types/: base_motion.cpp  circle_motion.cpp  delay_motion.cpp  move_joint.cpp  set_planner.cpp  set_velocity.cpp
src/command/ar_projects/src/tasks/: draw_rectangle.cpp  task_base.cpp
src/command/ar_scene/: CMakeLists.txt  package.xml
src/command/ar_scene/include/ar_scene/: ar_mesh_server.h  ar_scene_manager.h
src/command/ar_scene/src/: ar_mesh_server.cpp  ar_scene_manager.cpp  mesh_sequence_example.cpp
src/command/ar_ui/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/command/ar_ui/include/ar_ui/: behavior_tree_panel.h  bt_manager_window.h  param_editor_panel.h  param_editor_window.h
src/command/ar_ui/src/: behavior_tree_panel.cpp  bt_manager_main.cpp  bt_manager_window.cpp  param_editor_main.cpp  param_editor_panel.cpp  param_editor_window.cpp
src/communication/master/: CMakeLists.txt  package.xml
src/communication/master/include/: driver_parameters.h  ethercat_manager.h  igh_cpp.hpp  igh_error_handler.hpp  igh_gobal.hpp  igh_manager.hpp  igh_slave.hpp  object_dictionary.hpp  soem_cpp.h  timing.hpp
src/communication/master/src/: ethercat_manager.cpp  igh_error_handler.cpp  igh_manager.cpp  igh_slave.cpp  soem_cpp.cpp  timing.cpp
src/utilities/ar_common/: CMakeLists.txt  package.xml
src/utilities/ar_common/include/ar_common/: ar_definition.h  common.h  joint_link_definition.h  planner_definition.h
src/utilities/ar_common/src/: common.cpp
src/utilities/ar_common/test/: planner_def_test.cpp
src/utilities/ar_computation/: CMakeLists.txt
src/utilities/ar_computation/include/: computation.h  conversion.h
src/utilities/ar_computation/src/: computation.cpp  conversion.cpp
utilities/ar_utils/: CMakeLists.txt
utilities/ar_utils/include/: ar_serializer.h
utilities/ar_utils/src/: ar_logging.cpp  ar_serializer.cpp  ar_utils.cpp
utilities/ar_utils/test/: test_log.cpp
(+272 files in other folders)
