<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>ar_control</name>
	<version>0.0.0</version>
	<description>TODO: Package description</description>
	<maintainer email="todo@gmail.com">todo</maintainer>
	<license>TODO: License declaration</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<depend>hardware_interface</depend>
	<depend>pluginlib</depend>
	<depend>rclcpp</depend>
	<depend>rclcpp_lifecycle</depend>
	<depend>master</depend>
	<depend>moveit_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>octomap</depend>
	<depend>octomap_msgs</depend>
	<depend>octomap_ros</depend>

	<build_depend>yaml_cpp_vendor</build_depend>
	<build_depend>urdf</build_depend>
	<build_depend>action</build_depend>
	<build_depend>devices</build_depend>
	<build_depend>ar_utils</build_depend>
	<exec_depend>ar_desc</exec_depend>
	<exec_depend>ar_comm</exec_depend>
	<exec_depend>devices</exec_depend>
	<exec_depend>ar_utils</exec_depend>

	<exec_depend>force_torque_sensor_broadcaster</exec_depend>
	<exec_depend>forward_command_controller</exec_depend>
	<exec_depend>joint_state_broadcaster</exec_depend>
	<exec_depend>joint_trajectory_controller</exec_depend>
	<exec_depend>joint_state_publisher_gui</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>rviz2</exec_depend>
	<exec_depend>xacro</exec_depend>


	<test_depend>ament_cmake_gtest</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
