<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ar_projects</name>
  <version>0.0.1</version>
  <description>YAML-configurable motion sequence generator for Behavior Trees</description>
  <maintainer email="haonghuypham6801@gmail.com">hans</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>ar_planning_interface</depend>
  <depend>ar_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
